# github-devsecops-fundamentals

./: .dockerignore  .gitignore  .prettierignore  404.html  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  index.html  jest.config.js  mkdocs.yml  noxfile.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.ci.txt  requirements.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.devcontainer/local-features/: first-run-notice.txt
.github/: dependabot.yml  dependency-review-config.yml  release.yml
.github.reference/: dependency-review-config.yml
.github.reference/workflows/: 01.1.continuous.integration.yml  02.1.continuous.delivery.yml  02.2.continuous.delivery.yml  04.continuous.deployment.yml  1.1.continuous.integration.yml
.github/workflows/: 01.1.continuous.integration.yml  01.2.continuous.integration.yml  01.continuous.integration.yml  02.1.continuous.delivery.yml  02.2.continuous.delivery.yml  02.continuous.delivery.yml  02.continuous.integration.yml  03.continuous.delivery.yml  03.extra.container.image.packaging.yml  03.package.yml  04.continuous.deployment.yml  1.1.continuous.integration.yml  1.2.continuous.integration.yml  2.1.continuous.delivery.yml  2.2.continuous.delivery.yml  2.3.optional.container.image.packaging.yml  3.continuous.deployment.yml  codeql.yml  continuous-deployment.yml  continuous-integration.yml  continuous.delivery.yml  continuous.development.deployment.yml  continuous.integration.extended.yml  continuous.integration.preliminary.yml  continuous.production.deployment.yml  continuous.staging.deployment.yml  continuous.versioning.yml  dependabot.yml  package.yml  pages.yml  publish.pages.yaml
Labs-Instructions/: index.html
Labs-Instructions/01.Collaborate/: index.html
Labs-Instructions/02.Secure-Software-Supply-Chain/: index.html
Labs-Instructions/03.Automate-Release/: index.html
Labs-Instructions/Collaborate/: index.html
Labs-Instructions/Version-Control/: index.html
Release-Automation/: README.md  app.py  index.html  mkdocs.yml  noxfile.py  pyproject.toml
Release-Automation/docs/: README.md
Release-Automation/docs copy/: about.md  deployment.md  setup.md  workflow.md
Release-Automation/docs/git/: advanced.md  bash.md  basic.md  github.md  submodules-vs-subtrees.md
Release-Automation/docs/guides/: git-add.md  git-clone.md  git-commit.md  git-init.md  git-pull.md  git-push.md  git-remote.md  git-status.md  install-git.md  what-is-git.md
Release-Automation/release_automation/: __init__.py  config.py  db.py  models.py  user.py
Release-Automation/release_automation/static/css/: style.css
Release-Automation/release_automation/templates/: base.html  index.html
Release-Automation/tests/: conftest.py  test_index.py
Software-Supply-Chain/: index.html
Tetris-Game/: index.html
Value-Stream-Management/: index.html
Version-Control/: index.html  index.md
architecture/: outcome.excalidraw
docs/: index.html  index.md  prerequisites.md
exercises/: index.html
javascripts/: tables.js
prerequisites/: index.html
scripts/: vulnerable_script.py
search/: search_index.json
tests/: test_mkdocs.py  tetris.spec.js
(+146 files in other folders)
