[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "github-devsecops-fundamentals"
version = "0.1.2"
description = "GitHub DevSecOps Fundamentals"
authors = ["Nick Alteen <ncalteen@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.2"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-minify-plugin = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.6"
pytest = "^7.4.2"
coverage = "^7.3.1"
black = "^23.9.1"
nox = "^2023.4.22"
coverage-badge = "^1.1.0"

[tool.isort]
profile = "black"

[tool.pylint]
output-format = "text"
max-nested-blocks = 5
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
max-line-length = 88
max-module-lines = 1000

[tool.black]
line-length = 88

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
